--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-.ipynb_checkpoints/Sequence to Sequence Learning with Neural Networks.ipynb
+## Temp files
+*~
+
+## Jupyter notebooks
+.ipynb_checkpoints
+
+ideas.txt
